[package]
name = "rust_ac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.30"
display_bytes = "0.2.1"
phf = { version = "0.11.2", default-features = false }
phf_macros = "0.11.2"
sysinfo = "0.29.8"
time = "0.3.28"
tokio = "1.32.0"
win32-foundation = "0.1.0"
winapi.features = ["processthreadsapi", "consoleapi"]
winapi.version = "0.3.9"
windows.features = ["Win32_Foundation", "Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging",
   "Win32_System_Memory",
   "Win32_System_Diagnostics_ToolHelp",
   "Win32_UI_Input_KeyboardAndMouse",
   "Win32_System_LibraryLoader",
   "Win32_System_Console",
   "Win32_Graphics_Gdi"]
windows.version = "0.51.1"
